# cf-polygon-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mcp/: server.py  tool_registry.py
src/mcp/utils/: common.py  contest_problems.py  downloads.py  problem_checker.py  problem_content.py  problem_create.py  problem_extra_validators.py  problem_file.py  problem_info.py  problem_interactor.py  problem_package_workflow.py  problem_packages.py  problem_readiness.py  problem_release.py  problem_save_statement.py  problem_solution_view.py  problem_solutions.py  problem_sources.py  problem_statements.py  problem_tests_extended.py  problem_update_info.py  problem_validator.py  problem_working_copy.py  problems.py
src/polygon/: client.py  download.py  models.py  problem.py
src/polygon/api/: contest_problems.py  problem_content.py  problem_create.py  problem_discard_working_copy.py  problem_extra_validators.py  problem_info.py  problem_packages.py  problem_save_statement.py  problem_sources.py  problem_tests_extended.py  problem_update_info.py  problem_update_working_copy.py
src/tools/: problems.py
tests/: __init__.py  fake_problem_session.py  test_changelog_release_notes.py  test_mcp_package_workflow.py  test_mcp_problem_readiness.py  test_mcp_problem_release.py  test_mcp_server_registry.py  test_mcp_utils_extensions.py  test_packaging_config.py  test_polygon_api_extensions.py  test_polygon_downloads.py  test_polygon_models.py  test_python_compatibility.py  test_readme_documentation.py
(+3 files in other folders)
