[project]
name = "cf-polygon-mcp"
version = "0.12.1"
description = "基于 Codeforces Polygon API 的 MCP 工具集"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0.0",
    "requests>=2.32.3",
]

[project.scripts]
cf-polygon-mcp = "main:serve_cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
